--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    
+    <title>Training TR-103 Report</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <a href="DAY-2/box1.html">CLICK HERE</a>
+    <header>
+        <img src="./image/logo.png" alt="Logo" class="logo">
+        <h1>Training TR-102 Report</h1>
+        <p>By Amandeep kaur, URN 2104064, Guru Nanak Dev Engineering College Ludhiana</p>
+        <h2>4 Week training at Guru nanak Dev Engineering college Ludhiana</h2>
+    </header>
+
+    <nav>
+        <button>Day 1</button>
+        <button>Day 2</button>
+        <button>Day 3</button>
+        <button>Day 4</button>
+        <button>Day 5</button>
+        <button>Day 6</button>
+        <button>Day 7</button>
+        <button>Day 8</button>
+        <button>Day 9</button>
+        <button>Day 10</button>
+        <button>Day 11</button>
+        <button>Day 12</button>
+        <button>Day 13</button>
+        <button>Day 14</button>
+        <button>Day 15</button>
+        <button>Day 16</button>
+        <button>Day 17</button>
+        <button>Day 18</button>
+    </nav>
+
+    <main>
+        <section class="gallery">
+            <h3>Gallery</h3>
+            <img src="./image/Training.png" alt="Training Image" class="gallery-image">
+            <p class="caption">11 Jun 2024, 1:30 pm</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© Amandeep kaur</p>
+    </footer>
 </body>
 </html>
