--- a/DAY-1/index.html
+++ b/DAY-1/index.html
@@ -10,7 +10,7 @@
         <h5>Amandeep kaur</h5>
         <h6>Amandeep kaur</h6>
         <p>Lorem ipsum <b>dolor</b>sit amet consectetur adipisicing elit. Excepturi quasi similique doloribus, tempore inventore ea dolorem iste reprehenderit accusamus veritatis velit, labore, quis ullam temporibus quisquam dolore? Veniam, excepturi cupiditate.</p>
-        <img src="../images/2115010.jpeg"alt="image is under loading" width="'800px" height="500px"
+        <img src="./images/2115010.jpeg"alt="image is under loading" width="'800px" height="500px"
         <ol>
             <li>name
                 <ol type="'A"><li>type name</li></ol>
