--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
 <body>
     <header>
         <img src="./image/logo.png" alt="Logo" class="logo">
-        <h1>Training TR-102 Report</h1>
+        <h1>Training TR-103 Report</h1>
         <p>By Amandeep kaur, URN 2104064, Guru Nanak Dev Engineering College Ludhiana</p>
         <h2>4 Week training at Guru nanak Dev Engineering college Ludhiana</h2>
     </header>
 
     <nav>
-        <button>Day 1</button>
-        <button>Day 2</button>
-        <button>Day 3</button>
-        <button>Day 4</button>
-        <button>Day 5</button>
-        <button>Day 6</button>
-        <button>Day 7</button>
-        <button>Day 8</button>
-        <button>Day 9</button>
-        <button>Day 10</button>
-        <button>Day 11</button>
-        <button>Day 12</button>
-        <button>Day 13</button>
-        <button>Day 14</button>
-        <button>Day 15</button>
-        <button>Day 16</button>
-        <button>Day 17</button>
-        <button>Day 18</button>
+        <button><a href="DAY-1/index.html">Day 1</a></button>
+        <button><a href="DAY-2/box2.html">Day 2</a></button>
+        <button><a href="DAY-3/index1.html">Day 3</a></button>
+        <button><a href="DAY-4/food4you.html">Day 4</button>
+        <button><a href="DAY-5/index.html"></a>Day 5</button>
+        <button><a href="DAY-6/index.html"></a>Day 6</button>
+        <button><a href="DAY-7/index.html"></a>Day 7</button>
+        <button><a href="DAY-8/index.html"></a>Day 8</button>
+        <button><a href="DAY-9/index.html"></a>Day 9</button>
+        <button><a href="DAY-10/index.html"></a>Day 10</button>
+        <button><a href="DAY-11/index.html"></a>Day 11</button>
+        <button><a href="DAY-12/index.html"></a>Day 12</button>
+        <button><a href="DAY-13/index.html"></a>Day 13</button>
+        <button><a href="DAY-14/index.html"></a>Day 14</button>
+        <button><a href="DAY-15/index.html"></a>Day 15</button>
+        <button><a href="DAY-16/index.html"></a>Day 16</button>
+        <button><a href="DAY-17/index.html"></a>Day 17</button>
+        <button><a href="DAY-18/index.html"></a>Day 18</button>
     </nav>
 
     <main>
