--- a/DAY-2/box1.html
+++ b/DAY-2/box1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>This is my website</title>
-        <link rel="stylesheet" href="../day2/style1.css">
+        <link rel="stylesheet" href="../DAY-2/style1.css">
     </head>
     <body>
         <!--container start-->
