--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         <button><a href="DAY-1/index.html">Day 1</a></button>
         <button><a href="DAY-2/box2.html">Day 2</a></button>
         <button><a href="DAY-3/index1.html">Day 3</a></button>
-        <button><a href="DAY-4/food4you.html">Day 4</button>
-        <button><a href="DAY-5/index.html"></a>Day 5</button>
-        <button><a href="DAY-6/index.html"></a>Day 6</button>
-        <button><a href="DAY-7/index.html"></a>Day 7</button>
-        <button><a href="DAY-8/index.html"></a>Day 8</button>
-        <button><a href="DAY-9/index.html"></a>Day 9</button>
-        <button><a href="DAY-10/index.html"></a>Day 10</button>
-        <button><a href="DAY-11/index.html"></a>Day 11</button>
-        <button><a href="DAY-12/index.html"></a>Day 12</button>
-        <button><a href="DAY-13/index.html"></a>Day 13</button>
-        <button><a href="DAY-14/index.html"></a>Day 14</button>
-        <button><a href="DAY-15/index.html"></a>Day 15</button>
-        <button><a href="DAY-16/index.html"></a>Day 16</button>
-        <button><a href="DAY-17/index.html"></a>Day 17</button>
-        <button><a href="DAY-18/index.html"></a>Day 18</button>
+        <button><a href="DAY-4/food4you.html">Day 4</a></button>
+        <button><a href="DAY-5/day5.html"></a>Day 5</a></button>
+        <button><a href="DAY-6/DAY-7.pdf"></a>Day 6</a></button>
+        <button><a href="DAY-7/index.html"></a>Day 7</a></button>
+        <button><a href="DAY-8/index.html"></a>Day 8</a></button>
+        <button><a href="DAY-9/index.html"></a>Day 9</a></button>
+        <button><a href="DAY-10/index.html"></a>Day 10</a></button>
+        <button><a href="DAY-11/index.html"></a>Day 11</a></button>
+        <button><a href="DAY-12/index.html"></a>Day 12</a></button>
+        <button><a href="DAY-13/index.html"></a>Day 13</a></button>
+        <button><a href="DAY-14/index.html"></a>Day 14</a></button>
+        <button><a href="DAY-15/index.html"></a>Day 15</a></button>
+        <button><a href="DAY-16/index.html"></a>Day 16</a></button>
+        <button><a href="DAY-17/index.html"></a>Day 17</a></button>
+        <button><a href="DAY-18/index.html"></a>Day 18</a></button>
     </nav>
 
     <main>
