--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
         <button><a href="DAY-2/box2.html">Day 2</a></button>
         <button><a href="DAY-3/index1.html">Day 3</a></button>
         <button><a href="DAY-4/food4you.html">Day 4</a></button>
-        <button><a href="DAY-5/day5.html"></a>Day 5</a></button>
-        <button><a href="DAY-6/DAY-7.pdf"></a>Day 6</a></button>
-        <button><a href="DAY-7/index.html"></a>Day 7</a></button>
-        <button><a href="DAY-8/index.html"></a>Day 8</a></button>
-        <button><a href="DAY-9/index.html"></a>Day 9</a></button>
-        <button><a href="DAY-10/index.html"></a>Day 10</a></button>
-        <button><a href="DAY-11/index.html"></a>Day 11</a></button>
-        <button><a href="DAY-12/index.html"></a>Day 12</a></button>
-        <button><a href="DAY-13/index.html"></a>Day 13</a></button>
-        <button><a href="DAY-14/index.html"></a>Day 14</a></button>
-        <button><a href="DAY-15/index.html"></a>Day 15</a></button>
-        <button><a href="DAY-16/index.html"></a>Day 16</a></button>
-        <button><a href="DAY-17/index.html"></a>Day 17</a></button>
-        <button><a href="DAY-18/index.html"></a>Day 18</a></button>
+        <button><a href="DAY-5/day5.html">Day 5</a></button>
+        <button><a href="DAY-6/DAY-7.pdf">Day 6</a></button>
+        <button><a href="DAY-7/index.html">Day 7</a></button>
+        <button><a href="DAY-8/index.html">Day 8</a></button>
+        <button><a href="DAY-9/index.html">Day 9</a></button>
+        <button><a href="DAY-10/index.html">Day 10</a></button>
+        <button><a href="DAY-11/index.html">Day 11</a></button>
+        <button><a href="DAY-12/index.html">Day 12</a></button>
+        <button><a href="DAY-13/index.html">Day 13</a></button>
+        <button><a href="DAY-14/index.html">Day 14</a></button>
+        <button><a href="DAY-15/index.html">Day 15</a></button>
+        <button><a href="DAY-16/index.html">Day 16</a></button>
+        <button><a href="DAY-17/index.html">Day 17</a></button>
+        <button><a href="DAY-18/index.html">Day 18</a></button>
     </nav>
 
     <main>
