--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <button><a href="DAY-4/food4you.html">Day 4</a></button>
         <button><a href="DAY-5/day5.html">Day 5</a></button>
         <button><a href="DAY-6/DAY-6.pdf">Day 6</a></button>
-        <button><a href="DAY-7/index.html">Day 7</a></button>
-        <button><a href="DAY-8/index.html">Day 8</a></button>
+        <button><a href="DAY-7/day-7.pdf">Day 7</a></button>
+        <button><a href="DAY-8/new_ontology1.svg">Day 8</a></button>
         <button><a href="DAY-9/index.html">Day 9</a></button>
         <button><a href="DAY-10/index.html">Day 10</a></button>
         <button><a href="DAY-11/index.html">Day 11</a></button>
