--- a/DAY-5/index.html
+++ b/DAY-5/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Training Report-Day 5</h1>
     <div class="pdf-container">
-        <iframe src="./day5.pdf" width="800" height="600" style="border:none;"></iframe>
+        <iframe src="day5.pdf" width="800" height="600" style="border:none;"></iframe>
     </div>
     <div class="button-container">
-        <button><a href="./rdf.pdf"</a>Link for output</button>
+        <button><a href="rdf.pdf"</a>Link for output</button>
     </div>
 </body>
 </html
