--- a/DAY-12/index.html
+++ b/DAY-12/index.html
@@ -12,7 +12,7 @@
         <iframe src="./day12.pdf" width="800" height="600" style="border:none;"></iframe>
     </div>
     <div class="button-container">
-        <button><a href="./output.png"</a>Link for output</button>
+        <button><a href="./analytics.png"</a>Link for output</button>
     </div>
 </body>
 </html>
